--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,3 +5,10 @@ data_ingestion:
   source_url: https://github.com/amitgurkhe/ML-Classification/raw/main/bank-additional-full.zip
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir : artifacts/data_ingestion
+
+data_validation:
+  root_dir: artifacts/data_validation
+  unzip_data_dir: artifacts/data_ingestion/bank-additional-full.csv
+  STATUS_FILE: artifacts/data_validation/status.txt
+
+
